# nginx-oidc-gw-service

./: .gitignore  Cargo.toml  appsettings.json  dockerfile  temp.rs
helm-temp-debugging/auth-service/templates/: admin-db.yaml  auth-db.yaml  example-app.yaml  ingress.yaml  kafka-1.yaml  kafka-2.yaml  kafka.yaml  zookeeper.yaml
helm/auth-service/templates/: ingress.yaml  kafka-3.yaml
src/: main.rs
src/controllers/: auth_controller.rs
src/data_models/: mod.rs  outbox_action.rs  outbox_role.rs  outbox_user.rs  role.rs  user.rs
src/handlers/: callback_handler.rs  login_handler.rs  mod.rs  validation_handler.rs
src/models/: role.rs  user.rs
src/shared/: db_context.rs  db_context_factory.rs  jwt_provider.rs  mod.rs  oidc_client_factory.rs  oidc_state.rs  settings.rs  token_cache.rs
