[package]
name = "auth-service"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
actix-rt = "2.9.0"
log = "0.4.21"
env_logger = "0.11.3"
lazy_static = "1.4.0"
uuid = { version = "1.8.0", features = ["v4", "fast-rng", "serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.197", features = ["derive"] }
getset = "0.1.2"
config = "0.14.0"
openidconnect= { version = "3.5.0" }
base64 = "0.22.0"
serde_json = "1.0.80"
urldecode = "0.1.1"
anyhow = "1.0.81"
surrealdb = "1.4.2"
kafka = "0.10.0"
tokio = { version = "1.37.0", features = ["full"] }
tokio-util = "0.7.11"
